可以忽略的微小更新

--- a/elegantbook_sierxue.cls
+++ b/elegantbook_sierxue.cls
@@ -8,7 +8,7 @@
 %%%%%%%%%%%%%%%%%%%%%
 % % !Mode:: "TeX:UTF-8"
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{elegantbook_ddpom}[2019/08/18 v3.09 ElegantBook document class] % ganx Change {elegantbook} to {elegantbook_sierxue}.
+\ProvidesClass{elegantbook_sierxue}[2019/08/18 v3.09 ElegantBook document class] % ganx Change {elegantbook} to {elegantbook_sierxue}.
 
 \RequirePackage{kvoptions}
 \RequirePackage{etoolbox}
