--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -9,7 +9,7 @@
     mode=simple,
     result=answer,
     toc=onecol,
-]{elegantbook_ddpom}
+]{elegantbook_sierxue}
 \usepackage{float}
 
 \title{开源工具快速上手指南}
