不适用 fontawesome, 因为 ganx@vm 即使安装了 fontawesome, 还是报错找不到 fontawesome.

--- a/elegantbook_sierxue.cls
+++ b/elegantbook_sierxue.cls
@@ -397,7 +397,7 @@
 
 
 %%define the note and proof environment
-\RequirePackage{fontawesome,pifont,manfnt,bbding} % ganx Insert fontawesome.
+\RequirePackage{pifont,manfnt,bbding} % ganx Insert fontawesome.
 % list/itemize/enumerate setting
 \RequirePackage[shortlabels]{enumitem}
 \setlist{nolistsep}
@@ -599,12 +599,12 @@
 
 
 
-\newenvironment{note}{\par\noindent{\makebox[0pt][r]{\scriptsize\color{red!90}\faWarning\quad}\textbf{\color{second}% % ganx Change textdbend to dbend.
+\newenvironment{note}{\par\noindent{\makebox[0pt][r]{\scriptsize\color{red!90}\dbend\quad}\textbf{\color{second}% % ganx Change textdbend to dbend.
   \ifdefstring{\ELEGANT@lang}{en}{Note}{注意}\,
 }}\ifdefstring{\ELEGANT@lang}{en}{\itshape}{\kaishu}}{\par}
 
 % ganx Add a block. Begin
-\newenvironment{tip}{\par\noindent{\makebox[0pt][r]{\scriptsize\color{red!90}\faStarO\quad}\textbf{\color{second}%
+\newenvironment{tip}{\par\noindent{\makebox[0pt][r]{\scriptsize\color{red!90}\manconcentriccircles\quad}\textbf{\color{second}%
   \ifdefstring{\ELEGANT@lang}{en}{Tip}{提示}\,
 }}\ifdefstring{\ELEGANT@lang}{en}{\itshape}{\kaishu}}{\par}
 
