增加 \subsubsection{安装编辑软件 Vim}.

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -538,6 +538,13 @@ sudo apt install git-gui
     \item 在系统设置中的语言设置选择缺省输入方式为 fcitx.
 \end{enumerate}
 
+\subsubsection{安装编辑软件 Vim}%
+\label{ssub:vm-apt-vim}
+
+\begin{lstlisting}[escapeinside=``]
+sudo apt install vim vim-common vim-gnome
+\end{lstlisting}
+
 \newpage
 \section{Vim 编辑器}%
 \label{sec:vim}
