增加 \section{Texstudio 编辑器}。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -660,6 +660,24 @@ endif
     \item 插件的详细文档可以在命令模式下用 \lstinline{h:vimtex} 命令查看。
 \end{itemize}
 
+\section{Texstudio 编辑器}%
+\label{sec:texstudio}
+
+\subsection{参考资料}%
+\label{sub:texstudio-refs}
+
+\begin{itemize}
+    \item 官方网址： \href{https://github.com/texstudio-org/texstudio}
+        {github.com/texstudio-org/texstudio}
+    \item 问答网站：
+        \href{https://github.com/texstudio-org/texstudio/issues}
+        {github.com/texstudio-org/texstudio/issues}
+    \item Texstudio 教程：
+        \begin{itemize}
+            \item \href{https://github.com/texstudio-org/texstudio/wiki}
+                {github.com/texstudio-org/texstudio/wiki}
+        \end{itemize}
+\end{itemize}
 
 %待续
 %%Vim 的学习曲线（To do）。
