增加 \section{Visual Studio Code 编辑器}。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -679,6 +679,20 @@ endif
         \end{itemize}
 \end{itemize}
 
+\section{Visual Studio Code 编辑器}%
+\label{sec:vsc}
+
+\subsection{参考资料}%
+\label{sub:vsc-refs}
+
+\begin{itemize}
+    \item 官方网址： \href{https://code.visualstudio.com/}
+        {code.visualstudio.com/}
+    \item 官方文档：
+        \href{https://code.visualstudio.com/docs#vscode}
+        {code.visualstudio.com/docs}
+\end{itemize}
+
 %待续
 %%Vim 的学习曲线（To do）。
 %
