--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -22,7 +22,7 @@
 
 \extrainfo{本教程基于已经配置好的虚拟机，介绍科学研究中常用开源工具。
     最主要的目标是想让读者能在短时间内学会用{\rm \LaTeX{}} 写作，
-    以及用~{\rm \lstinline{Git}} 工具进行版本控制和团队协作。
+    以及用~{\rm Git} 工具进行版本控制和团队协作。
     在使用本虚拟机和本教程的过程中，如果发现其有不当及需改进之处，
     请不吝指出，谢谢{\rm !!!}}
 
