--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -114,9 +114,9 @@ Virtualbox 虚拟机的安装分为两个步骤：
 按照 \S\ref{sub:vbox-install} 完成安装后，就可以制作虚拟机 (guest
 machine) 了。
 虚拟机的一个优点是共享方便，团队成员使用同样的配置大大有利于团队协作。
-为配合本教程，我们精心制作了 Ubuntu 18.04 虚拟机，
-可以让读者快速地学习常用的开源工具，而不用花费大量时间于软件的安装和配置。
-我们称此虚拟机为 ganx@vm, 其安装和配置参见 \S\ref{sub:vbox-vm-install-set}.
+为配合本教程，我们精心制作了虚拟机，可以让读者快速地学习常用的开源工具，
+而不用花费大量时间于软件的安装和配置。
+此虚拟机的安装和配置参见 \S\ref{sub:vbox-vm-install-set}.
 
 \subsubsection{获取虚拟机}%
 \label{ssub:vm-download}
@@ -127,7 +127,7 @@ machine) 了。
 在虚拟机的系统设置中，可以设置虚拟机所用内存大小。设置内存请遵循以下原则：
 \begin{enumerate}
     \item 虚拟机的内存不能超过主机物理内存的一半；
-    \item ganx@vm 的内存最好不小于 2048 MB.
+    \item 如要顺畅地运行，虚拟机的内存最好不小于 2048 MB.
 \end{enumerate}
 
 \subsubsection{设定共享目录}%
