vm: 增加虚拟机上的硬盘设置。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -130,6 +130,11 @@ machine) 了。
     \item 如要顺畅地运行，虚拟机的内存最好不小于 2048 MB.
 \end{enumerate}
 
+\subsubsection{硬盘设置}%
+\label{ssub:vbox-set-vdi}
+
+如果虚拟机运行在固态硬盘上，在虚拟机的存储设置中的属性处，选择固态驱动器。
+
 \subsubsection{设定共享目录}%
 \label{ssub:vbox-set-share-folder}
 
