--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -592,19 +592,27 @@ endif
 \label{sec:latex-intro}
 
 \emph{使用 {\rm\LaTeX{}} 排版科技文章的优点}
-~\footnote{\href{https://github.com/HymanHuang/plutothesis/tree/master/PlutoKaiTi/a4paper}{参考文献}}
+~\footnote{
+    \href{https://www.ctan.org/tex-archive/info/lshort/chinese}
+                {一份不太简短的LATEX介绍}
+}
+~\footnote{
+    \href{https://github.com/HymanHuang/plutothesis/tree/master/PlutoKaiTi/a4paper}
+    {哈尔滨工业大学学位论文开题报告模板 0.2.0.20080430 版}
+}
 ：
 \begin{itemize}
     \item \LaTeX{}的设计思想基于 \emph{所想即所得}，即 \emph{WYSIWYG
         (What you see is what you mean)},
-        让你更专注于论文的思路贯通而不是繁杂的格式要求；
+        让用户只需专注于论文的思路贯通而不是繁杂的格式要求；
     \item \LaTeX 文件为纯文本文件，有利于使用 Git 进行版本控制；
     \item \LaTeX 的输出为符合国际文档标准的 pdf 文档，
         在 \emph{MicroSoft Windows},
         \emph{Mac}, \emph{Linux}~系统上是一致的，
         有利于跨平台使用以及使用不同平台成员的团队协作；
     \item \LaTeX 文件比~\emph{MicroSoft Word} 文件显著地小，易于传输和分享；
-    \item \LaTeX 数学公式输入排版，输出精美；
+    \item \LaTeX 数学公式输入排版，输出精美，并且
+        很容易生成复杂的专业排版元素,如脚注、交叉引用、参考文献、目录等；
     \item 国际期刊及会议一般都提供~\LaTeX 论文模板,使论文投稿排版更容易；
     \item 不少高校提供符合要求的~\LaTeX{}学位论文写作模板；
     \item 制作幻灯片的~\LaTeX 宏包~\emph{beamer}, 公式和文字输入一样方便，
@@ -612,7 +620,7 @@ endif
         众多的默认模版供选择，一个简单命令就可切换，
         让幻灯片制作更轻松、专业、漂亮；
     \item  众多的文档类和宏包支持，以及强大的用户 {\bf DIY} 功能，
-          给你的感觉是``没有你做不到的，只有你想不到的''。
+          给用户的感觉是`` \emph{没有做不到的，只有想不到的}~''。
     % \item  对许多忠实的~TeXer 而言，\TeX/\LaTeX 已经不仅仅是一种排版软件，
     %     更成为一种信仰，因为它的诞生及其发展本身就是一段趋向完美的传奇。
 \end{itemize}
