修改参考资料部分。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -703,7 +703,7 @@ endif
                 {30分钟从完全陌生到基本入门}
             \item
                 \href{https://www.ctan.org/tex-archive/info/lshort/chinese}
-                {一份不太简短的LATEX介绍}
+                {一份不太简短的LATEX介绍}：
         \href{http://mirrors.ctan.org/info/lshort/chinese/lshort-zh-cn.pdf}
                 {中文下载}
                 \footnote{如果 \lstinline{git clone} 了本仓库,
@@ -711,9 +711,18 @@ endif
                 目录中阅读此电子书:
                 \href{books/lshort-zh-cn.pdf}{一份不太简短的LATEX介绍} 。
                 由于从网页下载较慢，就放在本仓库了，感谢作者开源贡献。}
+                ，
+        \href{http://mirrors.ctan.org/info/lshort/english/lshort.pdf}
+                {英文下载}
+                \footnote{如果 \lstinline{git clone} 了本仓库,
+                可以在本仓库的 \lstinline{books}
+                目录中阅读此电子书:
+                \href{books/lshort.pdf}
+                {The Not So Short Introduction to LaTeX} 。
+                由于从网页下载较慢，就放在本仓库了，感谢作者开源贡献。}
             \item
                 \href{https://www.ctan.org/tex-archive/info/lshort/chinese}
-                {一份简短的 LaTeX 数学指南}
+                {一份简短的 LaTeX 数学指南}：
                 \href{https://wenda.latexstudio.net/article-5006.html}
                 {中文下载}
                 \footnote{如果 \lstinline{git clone} 了本仓库,
@@ -722,6 +731,7 @@ endif
                 \href{books/short-math-guide(cn).pdf}
                 {一份简短的 LaTeX 数学指南} 。
                 由于从网页下载较慢，就放在本仓库了，感谢作者开源贡献。}
+                ，
                 \href{http://mirrors.ustc.edu.cn/CTAN/info/short-math-guide/short-math-guide.pdf}{英文下载}
                 \footnote{如果 \lstinline{git clone} 了本仓库,
                 可以在本仓库的 \lstinline{books}
@@ -731,7 +741,7 @@ endif
                 由于从网页下载较慢，就放在本仓库了，感谢作者开源贡献。}
             \item \href{https://github.com/huangxg/lnotes}
                 {雷太赫排版系统简介 An introduction to TeX/LaTeX
-                typesetting system}
+                typesetting system}:~
         \href{https://github.com/huangxg/lnotes/raw/master/lnotes2.pdf}{下载}
                 \footnote{如果 \lstinline{git clone} 了本仓库,
                 可以在本仓库的 \lstinline{books}
