--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -592,13 +592,12 @@ endif
 \label{sec:latex-intro}
 
 \subsection*{使用 \LaTeX{} 排版科技文章的优点
-\footnote{参考
+~\footnote{参考
     \href{https://www.ctan.org/tex-archive/info/lshort/chinese}
                 {一份（不太）简短的LATEX介绍}
-}
-~\footnote{参考
+    \em{以及}
     \href{https://github.com/HymanHuang/plutothesis/tree/master/PlutoKaiTi/a4paper}
-    {哈尔滨工业大学学位论文开题报告模板 0.2.0.20080430 版}
+    {哈尔滨工业大学开题报告模板}
 }
 }%
 \label{sub:latex-advantage}
