--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -595,7 +595,7 @@ endif
 ~\footnote{参考
     \href{https://www.ctan.org/tex-archive/info/lshort/chinese}
                 {一份（不太）简短的LATEX介绍}
-    \em{以及}
+    {\emph 以及}
     \href{https://github.com/HymanHuang/plutothesis/tree/master/PlutoKaiTi/a4paper}
     {哈尔滨工业大学开题报告模板}
 }
