vim: 注释掉不需要的内容。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -221,9 +221,9 @@ machine) 了。
 中的配置文件是某个电脑所特有的。
 建议本教程的读者在未掌握 \lstinline{dotfiles}
 的配置前，不要更改这两个文件夹中的任何文件。
-\begin{tip}\label{note:vim-customized}
-    如果要对 Vim 做一些个性化的设置，可以参考 \S\ref{ssub:vim-config}.
-\end{tip}
+% \begin{tip}\label{note:vim-customized}
+%     如果要对 Vim 做一些个性化的设置，可以参考 \S\ref{ssub:vim-config}.
+% \end{tip}
 
 %\subsubsection{使用本虚拟机的注意事项}%
 %\label{ssub:vbox-guest-ganx}
