latex: 增加 \subsection*{学习路径}

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -522,7 +522,17 @@ endif
             虽然不是真正的 ``所见即所得'', 但已离其不远了。
         }
 \end{itemize}
-\newpage
+\subsection*{学习路径}%
+\label{sec:latex-learning}
+
+% 学习 \LaTeX{}, 首先要明确学习目的。
+% 如果学习目的是使用给定的模板撰写文档，那么需要学习的学习时间是较短的。
+% 如果是要设计精美的 \LaTeX{} 模板，那就非一朝一日之功了。
+学习完 \S\ref{sec:latex-basic} 之后,
+如果要使用期刊给定的 \LaTeX{} 模板写作学术论文，你可以学习
+\S\ref{sec:latex-paper} 中的一个实例；
+如果要使用 \LaTeX{} 模板写作学位论文，你可以学习
+\S\ref{sec:latex-thesis} 中的一个实例。
 \section{参考资料}%
 \label{sec:latex-refs}
 
