增加三个学习使用 latex 的 三个 section  标题。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -532,6 +532,19 @@ endif
 \S\ref{sec:latex-paper} 中的一个实例；
 如果要使用 \LaTeX{} 模板写作学位论文，你可以学习
 \S\ref{sec:latex-thesis} 中的一个实例。
+
+\section{基础知识}%
+\label{sec:latex-basic}
+
+本节的基础知识学完以后，就可以使用模板写作论文了。
+
+\section{学术论文}%
+\label{sec:latex-paper}
+
+\section{学位论文}%
+\label{sec:latex-thesis}
+
+\newpage
 \section{参考资料}%
 \label{sec:latex-refs}
 
