修改引号，统一为中文直角双引号。

--- a/learn-latex/basic.tex
+++ b/learn-latex/basic.tex
@@ -3,11 +3,11 @@
 
 \documentclass{ctexart}
 
-% 待完成：将“文档标题” 改为 "LaTeX 基础练习"。
+% 待完成：将『文档标题』 改为 『LaTeX 基础练习』。
 % 注意：不要漏输了 LaTeX 之后的空格。
 \title{标题}
 
-% 待完成：输入自己的名字，替换"作者名字"。
+% 待完成：输入自己的名字，替换『作者名字』。
 \author{作者名字}
 
 \date{\today}
@@ -20,40 +20,40 @@
 
 \subsection{中文输入}\label{sub:basic-text-chinese}
 
-% 待完成学习：在“普通字体：” 后面输入 "你好，世界！". 
+% 待完成学习：在『普通字体：』 后面输入『你好，世界！』.
 普通字体：
 
-% 待完成学习：在“加粗字体：” 后面输入 "\textbf{你好，世界！}". 
+% 待完成学习：在『加粗字体：』 后面输入『\textbf{你好，世界！}』.
 加粗字体：
 
-% 待完成学习：在“意大利斜体：” 后面输入 "\textit{你好，世界！}". 
+% 待完成学习：在『意大利斜体：』 后面输入『\textit{你好，世界！}』.
 意大利斜体：
 
 \subsection{英文输入}\label{sub:basic-text-english}
 
-% 待完成学习：在“普通字体：” 后面输入 "Hello, world!". 
+% 待完成学习：在『普通字体：』 后面输入『Hello, world!』.
 普通字体：
 
-% 待完成学习：在“加粗字体：” 后面输入 "\textbf{Hello, world!}". 
+% 待完成学习：在『加粗字体：』 后面输入『\textbf{Hello, world!}』.
 加粗字体：
 
-% 待完成学习：在“意大利斜体：” 后面输入 "\textit{Hello, world!}". 
+% 待完成学习：在『意大利斜体：』 后面输入『\textit{Hello, world!}』.
 意大利斜体：
 
 \section{排版数学式子}\label{sec:math}
 
 \subsection{行内和行间公式}\label{sub:math-eq}
 
-% 待完成学习：在"行内数学式子：" 后面输入 "$ 1 + 2 = 3 $".
+% 待完成学习：在『行内数学式子：』 后面输入『$ 1 + 2 = 3 $』.
 行内数学式子方法 1：
 
-% 待完成学习：在"行内数学式子：" 后面输入 "\(1 + 2 = 3\)".
+% 待完成学习：在『行内数学式子：』 后面输入『\(1 + 2 = 3\)』.
 行内数学式子方法 2：
 
-% 待完成学习：在"行间数学式子：" 后面输入 "\[ 1 + 2 = 3 \]".
+% 待完成学习：在『行间数学式子：』 后面输入『\[ 1 + 2 = 3 \]』.
 行间数学式子方法 1：
 
-% 不推荐使用方法 2. 待完成练习：应用前面的知识，对``不推荐使用''加粗以警示。
+% 不推荐使用方法 2. 待完成练习：应用前面的知识，对『不推荐使用』加粗以警示。
 行间数学式子方法 2 (不推荐使用)：$$ 1 + 2 = 3 $$
 
 \end{document}
