修改格式为适合于手机横屏阅读的格式；修改颜色位护眼绿色。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -4,13 +4,15 @@
 \documentclass[
     11pt,
     cite=authoryear,
-    device=normal,
+    device=phone,
     lang=cn,
     mode=simple,
     result=answer,
     toc=onecol,
 ]{elegantbook_sierxue}
 \usepackage{float}
+\definecolor{geyecolor}{RGB}{199,237,204}%
+\pagecolor{geyecolor}
 
 \title{开源工具快速上手指南}
 \subtitle{Virtualbox、Linux、Vim、\LaTeX{}、Git、Zotero}
