--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -13,6 +13,14 @@
 \usepackage{float}
 \definecolor{geyecolor}{RGB}{199,237,204}%
 \pagecolor{geyecolor}
+\renewcommand{\lstlistingname}{\LaTeX{}模板}% Listing -> \LaTeX{}文档
+\lstdefinestyle{input}{
+    float=ht,
+    language=[LaTeX]TeX,
+    numbers=left,
+    frame=none,
+    xleftmargin=.05\textwidth
+}
 
 \title{开源工具快速上手指南}
 \subtitle{Virtualbox、Linux、Vim、\LaTeX{}、Git、Zotero}
