--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -546,6 +546,14 @@ endif
 \section{基础知识}%
 \label{sec:latex-basic}
 
+\subsection*{系统配置}%
+\label{sub:vm-vscode}
+
+我们假定你已经装好了 Virtualbox 软件，下载了虚拟机，
+并且对 Visual Studio Code (vscode) 代码编辑器已经有了一定的了解。
+现在请打开虚拟机，并且打开代码编辑器 vscode.
+
+\subsection{文本输入}%
 本节的基础知识学完以后，就可以使用模板写作论文了。
 
 \section{学术论文}%
