latex: 增加 \subsection{文本输入}，未完待续。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -554,6 +554,26 @@ endif
 现在请打开虚拟机，并且打开代码编辑器 vscode.
 
 \subsection{文本输入}%
+\label{sub:latex-text}
+
+我们现在学习在 \LaTeX\ 文档中输入文本。
+请在子文件夹 \lstinline{learn-latex} 中打开文件
+\lstinline{basic-01-en.tex}.
+文件中的内容如下所示。
+\lstinputlisting[
+    frame=none,
+    numbers=left,
+    xleftmargin=.05\textwidth]%
+{learn-latex/basic-01-en.tex}
+
+
+\lstset{numbers=left,frame=none}
+\lstinputlisting[
+    style=input,
+    caption={第一个例子 --- 中西文混排},
+    label=latex-basic-01]%
+{learn-latex/basic-01.tex}
+
 本节的基础知识学完以后，就可以使用模板写作论文了。
 
 \section{学术论文}%
