--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -823,40 +823,35 @@ SIMILAR 提示。
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from
-  2019-12-23 21-16-43.png}
+  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from 2019-12-23 21-16-43.png}
   \caption{搜索结果 1}%
   \label{fig:ludwig-result-1}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from
-  2019-12-23 21-16-55.png}
+  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from 2019-12-23 21-16-55.png}
   \caption{搜索结果 2}%
   \label{fig:ludwig-result-2}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from
-  2019-12-23 21-17-32.png}
+  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from 2019-12-23 21-17-32.png}
   \caption{筛选搜索范围}%
   \label{fig:ludwig-filter}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from
-  2019-12-23 21-18-09.png}
+  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from 2019-12-23 21-18-09.png}
   \caption{搜索结果 3}%
   \label{fig:ludwig-result-3}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from
-  2019-12-23 21-19-22.png}
+  \includegraphics[width=1.0\textwidth]{media/screenshots/ludwig/Screenshot from 2019-12-23 21-19-22.png}
   \caption{去掉 Perashables 后的搜索结果}%
   \label{fig:ludwig-result-4}
 \end{figure}
@@ -888,32 +883,27 @@ SIMILAR 提示。
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from
-  2019-11-29 17-52-45.png}
+  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from 2019-11-29 17-52-45.png}
   \caption{设定共享目录 --- 示意图 1}
 \end{figure}
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from
-  2019-11-29 17-53-28.png}
+  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from 2019-11-29 17-53-28.png}
   \caption{设定共享目录 --- 示意图 2}
 \end{figure}
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from
-  2019-11-29 17-54-41.png}
+  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from 2019-11-29 17-54-41.png}
   \caption{设定共享目录 --- 示意图 3}
 \end{figure}
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from
-  2019-11-29 17-55-59.png}
+  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from 2019-11-29 17-55-59.png}
   \caption{设定共享目录 --- 示意图 4}
 \end{figure}
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from
-  2019-11-29 17-59-22.png}
+  \includegraphics[width=0.9\textwidth]{media/screenshots/vm/Screenshot from 2019-11-29 17-59-22.png}
   \caption{设定共享目录 --- 示意图 5}
 \end{figure}
 
