--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -22,16 +22,16 @@
     xleftmargin=.05\textwidth
 }
 
-\title{开源工具快速上手指南}
-\subtitle{Virtualbox、Linux、Vim、\LaTeX{}、Git、Zotero}
+\title{开源写作工具快速上手指南}
+\subtitle{学习写作排版利器 \LaTeX{} 和团队协作神器 Git}
 
 \author{甘湘华}
 \institute{西南财经大学} % Commented out in the cls file.
 \date{\zhtoday}
 \version{0.01}
 
-\extrainfo{本教程基于已经配置好的虚拟机，介绍科学研究中常用开源工具。
-    最主要的目标是想让读者能在短时间内学会用{\rm \LaTeX{}} 写作，
+\extrainfo{本教程基于已经配置好的虚拟机，介绍写作中常用开源工具。
+    最主要的目标是想让读者能在短时间内学会用{\rm \LaTeX{}} 写作排版，
     以及用~{\rm Git} 工具进行版本控制和团队协作。
     在使用本虚拟机和本教程的过程中，如果发现其有不当及需改进之处，
     请不吝指出，谢谢{\rm!!!}}
