vm: 修改章名，明确“虚拟机软件”和“虚拟机”的区别。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -53,7 +53,7 @@
 \chapter{系统设置}%
 \label{cha:settings-system}
 
-\section{Virtualbox 虚拟机}%
+\section{Virtualbox 虚拟机软件}%
 \label{sec:vbox}
 
 \subsection{参考资料}%
