--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -73,7 +73,7 @@ Virtualbox 虚拟机软件参考资料网址：
 点击
 \href{https://mirror.tuna.tsinghua.edu.cn/virtualbox/LATEST.TXT}
 {Virtualbox清华镜像最新版本}，可以查到当前最新版本。
-写作这个教程的时候，版本是 6.1.0.
+写作这个教程的时候，版本是 6.1.
 Virtualbox 虚拟机的安装分为两个步骤：
 \begin{enumerate}
     \item 在主机（host computer）上安装基本软件；
@@ -121,8 +121,8 @@ Virtualbox 虚拟机的安装分为两个步骤：
 \subsection{使用虚拟机}%
 \label{sub:vbox-vm}
 
-按照 \S\ref{sub:vbox-install} 完成安装后，就可以制作虚拟机 (guest
-machine) 了。
+按照 \S\ref{sub:vbox-install} 完成安装后，
+就可以使用虚拟机 (guest machine) 了。
 虚拟机的一个优点是共享方便，团队成员使用同样的配置大大有利于团队协作。
 为配合本教程，我们精心制作了虚拟机，可以让读者快速地学习常用的开源工具，
 而不用花费大量时间于软件的安装和配置。
