--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -182,141 +182,6 @@ Virtualbox 虚拟机的安装分为两个步骤：
 \newpage
 \section{Linux 系统}%
 \label{sec:linux}
-
-\subsection{参考资料}%
-\label{sub:linux-refs}
-
-\begin{itemize}
-    \item 官方网址： \href{https://www.linux.org/}{https://www.linux.org/}
-    \item Ubuntu~~： \href{https://cn.ubuntu.com/}{https://cn.ubuntu.com/}
-    \item 社区讨论：
-        \href{https://forum.ubuntu.com.cn/}{https://forum.ubuntu.com.cn/}
-    \item 问答网站：
-        \href{https://askubuntu.com/}{https://askubuntu.com/}
-    \item Linux 教程：
-        \begin{itemize}
-            \item \lstinline{Ubuntu desktop help}\footnote{
-                按 \lstinline{F1} 即可以打开。}
-            \item \href{https://help.ubuntu.com/lts/ubuntu-help/index.html}
-                {Ubuntu 桌面指南}
-            \item \href{https://linuxtools-rst.readthedocs.io/zh_CN/latest/}
-                {Linux 工具快速教程}
-            \item \href{https://dunwu.github.io/linux-tutorial/#/}
-                {Linux 教程}
-        \end{itemize}
-\end{itemize}
-
-% \subsection{Linux 基本知识}%
-% \label{sub:linux-intro}
-
-
-\subsection{Linux 点文件~(dotfiles)配置}%
-\label{sub:dotfiles-settings}
-
-\subsubsection{点文件介绍}%
-\label{ssub:dotfiles-settings-intro}
-
-在 Unix/Linux/Mac 系统上，软件有它们各自的配置文件，通常以~. 开头，
-管它们叫 \emph{点文件}~(~\texttt{dotfiles}).
-这些点文件数量多，并且所在的位置还有所不同，管理起来并不是一个容易的事情。
-一个方法是把所有的这些配置文件放进一个文件夹，对每个配置文件用命令
-\lstinline{ln -s} 链接到原来的位置。
-这个文件夹可以用 git 仓库进行管理，
-可以方便我们把一台电脑上的配置，同步到另外的电脑上。
-
-作者配置的虚拟机上使用
-\href{https://github.com/anishathalye/dotbot}{dotbot} 技术来管理 dotfiles.
-在本虚拟机的 \lstinline{~/.df/} 目录中有两个文件夹: \lstinline{dotfiles}
-中的配置文件是所有电脑中都共同拥有的; \lstinline{dotfiles-local}
-中的配置文件是某个电脑所特有的。
-建议本教程的读者在未掌握 \lstinline{dotfiles}
-的配置前，不要更改这两个文件夹中的任何文件。
-% \begin{tip}\label{note:vim-customized}
-%     如果要对 Vim 做一些个性化的设置，可以参考 \S\ref{ssub:vim-config}.
-% \end{tip}
-
-%\subsubsection{使用本虚拟机的注意事项}%
-%\label{ssub:vbox-guest-ganx}
-
-\subsubsection{同步点文件的 Git 仓库}%
-\label{ssub:vbox-guest-ganx-conf}
-
-本虚拟机的配置文件主要由以下两个仓库控制：
-\begin{itemize}
-    \item \href{https://github.com/ddpom/dotfiles}
-        {https://github.com/ddpom/dotfiles}
-    \item \href{https://github.com/ddpom/dotfiles-local}
-        {https://github.com/ddpom/dotfiles-local}
-\end{itemize}
-
-\subsubsection{设置点文件仓库的更新提示}%
-\label{ssub:vbox-guest-ganx-conf-update-notification}
-
-两个仓库不时更新的，更新配置文件的提交实现后，会发出更新提示。
-如果你 \lstinline{watch (关注)} 了这两个仓库，就可以收到更新提示。
-设置步骤如下：
-\begin{enumerate}
-    \item 访问 \href{https://github.com/ddpom/dotfiles}
-        {https://github.com/ddpom/dotfiles}, 点击右上方
-        \lstinline{watch (关注)} 旁边的下拉菜单，选择 \lstinline{watching}.
-        如果你觉得这个仓库还有用的话，顺便点一下右边的 \lstinline{star}.
-    \item 访问 \href{https://github.com/ddpom/dotfiles-local}
-        {https://github.com/ddpom/dotfiles-local},
-        点击右上方 \lstinline{watch (关注)} 旁边的下拉菜单，
-        选择 \lstinline{watching}.
-        如果你觉得这个仓库还有用的话，顺便点一下右边的 \lstinline{star}.
-    \item 访问 \href{https://github.com/settings/notifications}
-        {https://github.com/settings/notifications},
-        配置你接收提示的选项。缺省设置下，你会在电子邮件里收到你关注的仓库的
-        提交。你还可以打钩 \lstinline{Web and Mobile} 选项。
-\end{enumerate}
-
-\subsubsection{更新点文件 --- 手动方式}%
-\label{ssub:update-dotfiles-manual}
-
-\begin{enumerate}
-    \item 运行下面几个命令，更新 \href{https://github.com/ddpom/dotfiles}
-        {https://github.com/ddpom/dotfiles}:
-\begin{lstlisting}[escapeinside=``]
-cd ~/.df/dotfiles
-git checkout .
-git pull --rebase
-git submodule update --remote --recursive
-./install
-\end{lstlisting}
-    \item 运行下面几个命令，更新
-        \href{https://github.com/ddpom/dotfiles-local}
-        {https://github.com/ddpom/dotfiles-local}:
-\begin{lstlisting}[escapeinside=``]
-cd ~/.df/dotfiles-local
-git checkout .
-git pull --rebase
-git submodule update --remote --recursive
-./install
-\end{lstlisting}
-\end{enumerate}
-
-\subsubsection{更新点文件 --- 自动方式}%
-\label{ssub:update-dotfiles-crontab}
-
-\begin{enumerate}
-    \item 本虚拟机已经将~\S\ref{ssub:update-dotfiles-manual}~中的所有命令写入
-\begin{lstlisting}[escapeinside=``]
-~/.df/dotfiles-local/scripts/pullDotfiles.sh
-\end{lstlisting}
-        脚本 \lstinline{pullDotfiles.sh} 的内容见 Github
-        \href{https://github.com/ddpom/scripts/blob/master/pullDotfiles.sh}
-        {链接}。
-    \item 运行命令 \lstinline{crontab -l}, 确认你看到以下内容：
-\begin{lstlisting}[escapeinside=``]
-SHELL=/usr/bin/zsh
-PATH=/sbin:/bin:/usr/sbin:/usr/bin
-MAILTO=""
-
-@hourly  /usr/bin/zsh ~/.df/dotfiles-local/scripts/pullDotfiles.sh >> ~/.df/log/pullDotfiles.log
-\end{lstlisting}
-\end{enumerate}
-
 \newpage
 \section{Vim 编辑器}%
 \label{sec:vim}
@@ -909,6 +774,140 @@ SIMILAR 提示。
 
 \section{Linux 系统}%
 \label{sec:linux-a}
+
+\subsection{Linux 参考资料}%
+\label{sub:linux-refs}
+
+\begin{itemize}
+    \item 官方网址： \href{https://www.linux.org/}{https://www.linux.org/}
+    \item Ubuntu~~： \href{https://cn.ubuntu.com/}{https://cn.ubuntu.com/}
+    \item 社区讨论：
+        \href{https://forum.ubuntu.com.cn/}{https://forum.ubuntu.com.cn/}
+    \item 问答网站：
+        \href{https://askubuntu.com/}{https://askubuntu.com/}
+    \item Linux 教程：
+        \begin{itemize}
+            \item \lstinline{Ubuntu desktop help}\footnote{
+                按 \lstinline{F1} 即可以打开。}
+            \item \href{https://help.ubuntu.com/lts/ubuntu-help/index.html}
+                {Ubuntu 桌面指南}
+            \item \href{https://linuxtools-rst.readthedocs.io/zh_CN/latest/}
+                {Linux 工具快速教程}
+            \item \href{https://dunwu.github.io/linux-tutorial/#/}
+                {Linux 教程}
+        \end{itemize}
+\end{itemize}
+
+% \subsection{Linux 基本知识}%
+% \label{sub:linux-intro}
+
+
+\subsection{Linux 点文件~(dotfiles)配置}%
+\label{sub:dotfiles-settings}
+
+\subsubsection{点文件介绍}%
+\label{ssub:dotfiles-settings-intro}
+
+在 Unix/Linux/Mac 系统上，软件有它们各自的配置文件，通常以~. 开头，
+管它们叫 \emph{点文件}~(~\texttt{dotfiles}).
+这些点文件数量多，并且所在的位置还有所不同，管理起来并不是一个容易的事情。
+一个方法是把所有的这些配置文件放进一个文件夹，对每个配置文件用命令
+\lstinline{ln -s} 链接到原来的位置。
+这个文件夹可以用 git 仓库进行管理，
+可以方便我们把一台电脑上的配置，同步到另外的电脑上。
+
+作者配置的虚拟机上使用
+\href{https://github.com/anishathalye/dotbot}{dotbot} 技术来管理 dotfiles.
+在本虚拟机的 \lstinline{~/.df/} 目录中有两个文件夹: \lstinline{dotfiles}
+中的配置文件是所有电脑中都共同拥有的; \lstinline{dotfiles-local}
+中的配置文件是某个电脑所特有的。
+建议本教程的读者在未掌握 \lstinline{dotfiles}
+的配置前，不要更改这两个文件夹中的任何文件。
+% \begin{tip}\label{note:vim-customized}
+%     如果要对 Vim 做一些个性化的设置，可以参考 \S\ref{ssub:vim-config}.
+% \end{tip}
+
+%\subsubsection{使用本虚拟机的注意事项}%
+%\label{ssub:vbox-guest-ganx}
+
+\subsubsection{同步点文件的 Git 仓库}%
+\label{ssub:vbox-guest-ganx-conf}
+
+本虚拟机的配置文件主要由以下两个仓库控制：
+\begin{itemize}
+    \item \href{https://github.com/ddpom/dotfiles}
+        {https://github.com/ddpom/dotfiles}
+    \item \href{https://github.com/ddpom/dotfiles-local}
+        {https://github.com/ddpom/dotfiles-local}
+\end{itemize}
+
+\subsubsection{设置点文件仓库的更新提示}%
+\label{ssub:vbox-guest-ganx-conf-update-notification}
+
+两个仓库不时更新的，更新配置文件的提交实现后，会发出更新提示。
+如果你 \lstinline{watch (关注)} 了这两个仓库，就可以收到更新提示。
+设置步骤如下：
+\begin{enumerate}
+    \item 访问 \href{https://github.com/ddpom/dotfiles}
+        {https://github.com/ddpom/dotfiles}, 点击右上方
+        \lstinline{watch (关注)} 旁边的下拉菜单，选择 \lstinline{watching}.
+        如果你觉得这个仓库还有用的话，顺便点一下右边的 \lstinline{star}.
+    \item 访问 \href{https://github.com/ddpom/dotfiles-local}
+        {https://github.com/ddpom/dotfiles-local},
+        点击右上方 \lstinline{watch (关注)} 旁边的下拉菜单，
+        选择 \lstinline{watching}.
+        如果你觉得这个仓库还有用的话，顺便点一下右边的 \lstinline{star}.
+    \item 访问 \href{https://github.com/settings/notifications}
+        {https://github.com/settings/notifications},
+        配置你接收提示的选项。缺省设置下，你会在电子邮件里收到你关注的仓库的
+        提交。你还可以打钩 \lstinline{Web and Mobile} 选项。
+\end{enumerate}
+
+\subsubsection{更新点文件 --- 手动方式}%
+\label{ssub:update-dotfiles-manual}
+
+\begin{enumerate}
+    \item 运行下面几个命令，更新 \href{https://github.com/ddpom/dotfiles}
+        {https://github.com/ddpom/dotfiles}:
+\begin{lstlisting}[escapeinside=``]
+cd ~/.df/dotfiles
+git checkout .
+git pull --rebase
+git submodule update --remote --recursive
+./install
+\end{lstlisting}
+    \item 运行下面几个命令，更新
+        \href{https://github.com/ddpom/dotfiles-local}
+        {https://github.com/ddpom/dotfiles-local}:
+\begin{lstlisting}[escapeinside=``]
+cd ~/.df/dotfiles-local
+git checkout .
+git pull --rebase
+git submodule update --remote --recursive
+./install
+\end{lstlisting}
+\end{enumerate}
+
+\subsubsection{更新点文件 --- 自动方式}%
+\label{ssub:update-dotfiles-crontab}
+
+\begin{enumerate}
+    \item 本虚拟机已经将~\S\ref{ssub:update-dotfiles-manual}~中的所有命令写入
+\begin{lstlisting}[escapeinside=``]
+~/.df/dotfiles-local/scripts/pullDotfiles.sh
+\end{lstlisting}
+        脚本 \lstinline{pullDotfiles.sh} 的内容见 Github
+        \href{https://github.com/ddpom/scripts/blob/master/pullDotfiles.sh}
+        {链接}。
+    \item 运行命令 \lstinline{crontab -l}, 确认你看到以下内容：
+\begin{lstlisting}[escapeinside=``]
+SHELL=/usr/bin/zsh
+PATH=/sbin:/bin:/usr/sbin:/usr/bin
+MAILTO=""
+
+@hourly  /usr/bin/zsh ~/.df/dotfiles-local/scripts/pullDotfiles.sh >> ~/.df/log/pullDotfiles.log
+\end{lstlisting}
+\end{enumerate}
 
 \subsection{虚拟机的安装和设置}%
 \label{sub:vbox-vm-install-set}
