linux: 将 section 的名字从 {Linux 系统} 改为 {使用 Linux 虚拟机}。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -128,6 +128,9 @@ Virtualbox 虚拟机的安装分为两个步骤：
 而不用花费大量时间于软件的安装和配置。
 此虚拟机的安装和配置参见 \S\ref{sub:vbox-vm-install-set}.
 
+\newpage
+\section{使用 Linux 虚拟机}%
+\label{sec:linux}
 \subsubsection{获取虚拟机}%
 \label{ssub:vm-download}
 
@@ -180,8 +183,6 @@ Virtualbox 虚拟机的安装分为两个步骤：
 \end{enumerate}
 
 \newpage
-\section{Linux 系统}%
-\label{sec:linux}
 \newpage
 \section{Vim 编辑器}%
 \label{sec:vim}
