linux: Promoting sectioning levels.
经验：在 vscode 里，使用 latex-workshop.promote-sectioning 命令。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -131,10 +131,10 @@ Virtualbox 虚拟机的安装分为两个步骤：
 \newpage
 \section{使用 Linux 虚拟机}%
 \label{sec:linux}
-\subsubsection{获取虚拟机}%
+\subsection{获取虚拟机}%
 \label{ssub:vm-download}
 
-\subsubsection{内存分配}%
+\subsection{内存分配}%
 \label{ssub:vbox-set-memory}
 
 在虚拟机的系统设置中，可以设置虚拟机所用内存大小。设置内存请遵循以下原则：
@@ -143,12 +143,12 @@ Virtualbox 虚拟机的安装分为两个步骤：
     \item 如要顺畅地运行，最好设置不小于 2048 MB 的虚拟机的内存。
 \end{enumerate}
 
-\subsubsection{硬盘设置}%
+\subsection{硬盘设置}%
 \label{ssub:vbox-set-vdi}
 
 如果虚拟机运行在固态硬盘上，在虚拟机的存储设置中的属性处，选择固态驱动器。
 
-\subsubsection{设定共享目录}%
+\subsection{设定共享目录}%
 \label{ssub:vbox-set-share-folder}
 
 当虚拟机需要与主机系统交换文件时，就可以设定共享目录。
@@ -161,7 +161,7 @@ Virtualbox 虚拟机的安装分为两个步骤：
     共享目录在未重启虚拟机的情况下马上生效。
 \end{tip}
 
-\subsubsection{调整虚拟机窗口大小}%
+\subsection{调整虚拟机窗口大小}%
 \label{ssub:vbox-set-window-size}
 
 调整虚拟机窗口有多种方法，我们这里提供三种：
@@ -173,7 +173,7 @@ Virtualbox 虚拟机的安装分为两个步骤：
     \item 用鼠标拖动窗口，调节窗口大小。
 \end{enumerate}
 
-\subsubsection{Virtualbox 的其它设置}%
+\subsection{Virtualbox 的其它设置}%
 \label{ssub:vbox-others}
 \begin{enumerate}
     \item 设置虚拟机的共享剪贴板选项为 \emph{双向}；
