增加宏包 menukeys. 警示：在最后加载这个宏包。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -11,6 +11,7 @@
     toc=onecol,
 ]{elegantbook_sierxue}
 \usepackage{float}
+\usepackage[]{menukeys}
 \definecolor{geyecolor}{RGB}{199,237,204}%
 \pagecolor{geyecolor}
 \renewcommand{\lstlistingname}{\LaTeX{}模板}% Listing -> \LaTeX{}文档
