latex package: 增加一个 lst style.
1. input style 的行间距和正文一致，并且可以跨页；
2. input-float style 的行间距很窄，并且不能跨页。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -16,6 +16,12 @@
 \pagecolor{geyecolor}
 \renewcommand{\lstlistingname}{\LaTeX{}模板}% Listing -> \LaTeX{}文档
 \lstdefinestyle{input}{
+    language=[LaTeX]TeX,
+    numbers=left,
+    frame=none,
+    xleftmargin=.05\textwidth
+}
+\lstdefinestyle{input-float}{
     float=ht,
     language=[LaTeX]TeX,
     numbers=left,
