vm: 修改 \subsection{调整虚拟机窗口大小}。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -173,13 +173,23 @@ Virtualbox 虚拟机的安装分为两个步骤：
 \subsection{调整虚拟机窗口大小}%
 \label{ssub:vbox-set-window-size}
 
-调整虚拟机窗口有多种方法，我们这里提供三种：
+此虚拟机的窗口大小缺省设置为 1360 x 768.
+如果需要更大的窗口，可以在打开虚拟机后，于窗口顶部菜单选择
+\menu{视图 > 自动调整尺寸}，然后最大化虚拟机窗口。
+（在 Linux 和  Windows 上通常为点击右上角的方框，在 Mac 上点击左上的放大键）
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=1.0\textwidth]%
+  {media/screenshots/vm/vlcsnap-2020-01-28-01h24m55s147-vm.png}
+  \caption{\menu{视图 > 自动调整尺寸}}%
+  \label{fig:vm-display}
+\end{figure}
+
+调整虚拟机窗口还有其它方法，我们这里提供两种：
 \begin{enumerate}
-    \item 最大化虚拟机窗口。（在 Linux 和 Windows 上通常为点击右上角的方框，
-        在 Mac 上点击左上的放大键）
     \item 按组合键 Host + F.（组合键在 Linux 和 Windows 上通常为右边的
         Ctrl, 在 Mac 上通常为左边的 Command 键）
-    \item 用鼠标拖动窗口，调节窗口大小。
+    \item 将鼠标移动到窗口边缘，调节窗口大小。
 \end{enumerate}
 
 \subsection{Virtualbox 的其它设置}%
