--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -441,21 +441,19 @@ endif
 
 我们现在学习在 \LaTeX\ 文档中输入文本。
 请在子文件夹 \lstinline{learn-latex} 中打开文件
-\lstinline{basic-01-en.tex}.
-文件中的内容如下所示。
+\lstinline{basic-01-text-en.tex}.
+文件中的内容如模板~\ref{basic-01-text-en} 所示。
 \lstinputlisting[
-    frame=none,
-    numbers=left,
-    xleftmargin=.05\textwidth]%
-{learn-latex/basic-01-en.tex}
+    style=input-float,
+    caption={文本输入 --- 西文},
+    label=basic-01-text-en]%
+{learn-latex/basic-01-text-en.tex}
 
-
-\lstset{numbers=left,frame=none}
 \lstinputlisting[
-    style=input,
-    caption={第一个例子 --- 中西文混排},
+    style=input-float,
+    caption={文本输入 --- 中西文},
     label=latex-basic-01]%
-{learn-latex/basic-01.tex}
+{learn-latex/basic-01-text.tex}
 
 本节的基础知识学完以后，就可以使用模板写作论文了。
 
