附加到上一个提交

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -453,8 +453,8 @@ endif
 \label{sub:latex-text}
 
 我们现在学习在 \LaTeX\ 文档中输入文本。
-请在子文件夹 \lstinline{learn-latex} 中打开文件
-\lstinline{basic-01-text-en.tex}.
+请在 vscode 编辑器中打开文件夹 \directory{/Documents/learn-latex/basic-01}
+中的文件 \lstinline{text-en.tex}.
 文件中的内容如模板~\ref{basic-01-text-en} 所示。
 \lstinputlisting[
     style=input-float,
