learn-latex: 增加 text.tex 的文档类选项，选择更小的页面，以使字体显得更大。

--- a/learn-latex/basic-01/text.tex
+++ b/learn-latex/basic-01/text.tex
@@ -1,6 +1,6 @@
 %!TEX program = xelatex
 %!TEX encoding = UTF-8 Unicode
-\documentclass{ctexart}
+\documentclass[a5paper,12pt]{ctexart}
 \begin{document}
 % 待完成学习：在『普通字体：』 后面输入『你好，世界！』.
 普通字体：
