可以忽略的微小更新

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -456,7 +456,7 @@ endif
 
 我们现在学习在 \LaTeX\ 文档中输入文本。
 请在 vscode 编辑器中打开文件夹 \directory{/Documents/learn-latex/basic-01}
-中的文件 \lstinline{text-en.tex}.
+中的文件 \texttt{text-en.tex}.
 文件中的内容如模板~\ref{basic-01-text-en} 所示。
 \lstinputlisting[
     style=input-float,
@@ -467,12 +467,13 @@ endif
 \noindent 更多关于命令的知识，参见
 \hyperlink{books/lshort-zh-cn.pdf.15}%
 {《一份不太简短的LATEX介绍》\S1.3.1}.
-    （详情参见 \hyperlink{books/lshort-zh-cn.pdf.16}%
-    {《一份不太简短的LATEX介绍》\S1.4.1}.）。
+文档类的详情可以参见 \hyperlink{books/lshort-zh-cn.pdf.16}%
+{《一份不太简短的LATEX介绍》\S1.4.1}.
+模板~\ref{basic-01-text-en} 中文档类的必选参数值为 \lstinline{article}.
 \lstinputlisting[
     style=input-float,
     caption={文本输入 --- 中西文},
-    label=latex-basic-01]%
+    label=basic-01-text]%
 {learn-latex/basic-01/text.tex}
 
 本节的基础知识学完以后，就可以使用模板写作论文了。
