--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -487,6 +487,17 @@ endif
 \noindent 更多关于命令的知识，参见
 \hyperlink{books/lshort-zh-cn.pdf.15}%
 {《一份不太简短的LATEX介绍》\S1.3.1}.
+
+\begin{latex}\label{tex:arguments}
+    一些 \LaTeX\ 命令可以接收 \emph{\gls{cs}} (\gls{cs-en})，
+    参数的内容会影响命令的效果。
+    \LaTeX\ 的参数分为可选参数和必选参数。
+    可选参数以方括号 \texttt[ ~ \texttt] 包裹；
+    必选参数一般以花括号 \texttt\{ ~ \texttt\} 包裹。
+    % 还有些命令可以带一个星号 \texttt*，
+    % 带星号和不带星号的命令效果有一定差异。
+    % 初次接触这些概念时，可以粗略地把星号看作一种特殊的可选参数。
+\end{latex}
 文档类的详情可以参见 \hyperlink{books/lshort-zh-cn.pdf.16}%
 {《一份不太简短的LATEX介绍》\S1.4.1}.
 模板~\ref{basic-01-text-en} 中文档类的必选参数值为 \lstinline{article}.
