--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -515,6 +515,16 @@ endif
 \begin{latex}\label{tex:environment}
     环境
 \end{latex}
+\begin{exercise}\label{ex:documentclass}
+    请在模板~\ref{basic-01-text-en} 中加上文档类的可选参数，设置纸张大小为
+    \texttt{a5paper}, 字体大小为 \texttt{12pt}.
+\end{exercise}
+完成练习后，我们将文件保存为 \texttt{text-en-a.tex}.
+\lstinputlisting[
+    style=input-float,
+    caption={文本输入 --- 西文},
+    label=basic-01-text-en-a]%
+{learn-latex/basic-01/text-en-a.tex}
 \lstinputlisting[
     style=input-float,
     caption={文本输入 --- 中西文},
